--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       class=" w-70 h-70 p-2 rounded-full animate-fade-in  profile-img overflow-hidden animate-fade-in"
     >
       <img
-        src="/profile.jpg"
+        src="profile.jpg"
         alt="Profile Image"
         class=" w-60 h-60 rounded-full animate-fade-in object-fit "
       />
@@ -333,7 +333,7 @@
             :class="darkMode ? 'bg-gray-800' : 'bg-gray-200'"
           >
             <img
-              src="/project1-image.png"
+              src="project1-image.png"
               alt="Project 1"
               class="w-full h-40 object-cover rounded-lg"
             />
@@ -350,7 +350,7 @@
             :class="darkMode ? 'bg-gray-800' : 'bg-gray-200'"
           >
             <img
-              src="/project2-image.png"
+              src="project2-image.png"
               alt="Project 2"
               class="w-full h-40 object-cover rounded-lg"
             />
@@ -367,7 +367,7 @@
             :class="darkMode ? 'bg-gray-800' : 'bg-gray-200'"
           >
             <img
-              src="/project3-image.png"
+              src="project3-image.png"
               alt="Project 3"
               class="w-full h-40 object-cover rounded-lg"
             />
@@ -387,7 +387,7 @@
             :class="darkMode ? 'bg-gray-800' : 'bg-gray-200'"
           >
             <img
-              src="/project4-image.png"
+              src="project4-image.png"
               alt="Project 4"
               class="w-full h-40 object-cover rounded-lg"
             />
